// Vitest Snapshot v1

exports[`Badge > Badge basicVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <div
    class="t-cell-group"
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="badge-demo"
      >
        <div
          class="badge-item"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            >
              16
            </div>
            
            消息
            
          </div>
        </div>
        <div
          class="badge-item"
        >
          <div
            class="t-badge"
          >
            <div
              class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
            >
              
            </div>
            
            消息
            
          </div>
        </div>
        <div
          class="badge-item"
        >
          <div
            class="t-badge"
          >
            <!--v-if-->
            
            消息
            
          </div>
        </div>
        <div
          class="badge-item"
        >
          <div
            class="t-badge"
          >
            <!--v-if-->
            
            消息
            
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge colorVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-454396e2=""
>
  <div
    class="t-cell-group"
    data-v-454396e2=""
  >
    <!--v-if-->
    <div
      class="t-cell-group__container"
    >
      
      <div
        class="badge-demo"
        data-v-454396e2=""
      >
        <div
          class="t-badge badge-item"
          data-v-454396e2=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-454396e2=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-454396e2=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="background: rgb(82, 196, 26);"
          >
            99+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-454396e2=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              绿色
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-454396e2=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="background: rgb(245, 47, 255);"
          >
            1
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-454396e2=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              自定义颜色
              
            </span>
          </button>
          
        </div>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge distVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-03ebeeaa=""
>
  <div
    class="badge-wrap"
    data-v-03ebeeaa=""
  >
    <div
      class="t-badge badge-item"
      data-v-03ebeeaa=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
      >
        
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-03ebeeaa=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-wrap"
    data-v-03ebeeaa=""
  >
    <div
      class="t-cell-group"
      data-v-03ebeeaa=""
    >
      <!--v-if-->
      <div
        class="t-cell-group__container"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-03ebeeaa=""
          value-align="left"
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__note"
          >
            
            <span
              data-v-03ebeeaa=""
            >
              单行标题
            </span>
            <div
              class="t-badge list-item-badge"
              data-v-03ebeeaa=""
            >
              <div
                class="t-badge__inner t-badge--medium t-badge--dot"
                style="right: 0px; top: 10px;"
              >
                
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge maxCountVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-386f9112=""
>
  <div
    class="badge-demo"
    data-v-386f9112=""
  >
    <div
      class="t-badge badge-item"
      data-v-386f9112=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-386f9112=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          14
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-386f9112=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        99+
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-386f9112=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          默认max:99
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-demo"
    data-v-386f9112=""
  >
    <div
      class="t-badge badge-item"
      data-v-386f9112=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        44+
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-386f9112=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          max:44
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-386f9112=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        105+
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-386f9112=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          max:105
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class=""
    data-v-386f9112=""
  >
    <div
      class="t-cell-group"
      data-v-386f9112=""
    >
      <!--v-if-->
      <div
        class="t-cell-group__container"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-386f9112=""
          value-align="left"
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <!--v-if-->
          <div
            class="t-cell__note"
          >
            
            <span
              data-v-386f9112=""
            >
              单行标题
            </span>
            <div
              class="t-badge list-item-badge"
              data-v-386f9112=""
            >
              <div
                class="t-badge__inner t-badge--medium t-badge--circle"
                style="right: 10px; top: 0px;"
              >
                16
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-05bee8a6=""
>
  <h1
    class="title"
    data-v-05bee8a6=""
  >
    Badge 徽标
  </h1>
  <p
    class="summary"
    data-v-05bee8a6=""
  >
    用于告知用户，该区域的状态变化或者待处理任务的数量。
  </p>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      01 小红点
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-03ebeeaa=""
      data-v-05bee8a6=""
    >
      <div
        class="badge-wrap"
        data-v-03ebeeaa=""
      >
        <div
          class="t-badge badge-item"
          data-v-03ebeeaa=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--dot"
          >
            
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-03ebeeaa=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-wrap"
        data-v-03ebeeaa=""
      >
        <div
          class="t-cell-group"
          data-v-03ebeeaa=""
        >
          <!--v-if-->
          <div
            class="t-cell-group__container"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-03ebeeaa=""
              value-align="left"
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cell__note"
              >
                
                <span
                  data-v-03ebeeaa=""
                >
                  单行标题
                </span>
                <div
                  class="t-badge list-item-badge"
                  data-v-03ebeeaa=""
                >
                  <div
                    class="t-badge__inner t-badge--medium t-badge--dot"
                    style="right: 0px; top: 10px;"
                  >
                    
                  </div>
                  <!---->
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      02 数字型
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-386f9112=""
    >
      <div
        class="badge-demo"
        data-v-386f9112=""
      >
        <div
          class="t-badge badge-item"
          data-v-386f9112=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-386f9112=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              14
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-386f9112=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            99+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-386f9112=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              默认max:99
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-demo"
        data-v-386f9112=""
      >
        <div
          class="t-badge badge-item"
          data-v-386f9112=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            44+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-386f9112=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              max:44
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-386f9112=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            105+
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-386f9112=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              max:105
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class=""
        data-v-386f9112=""
      >
        <div
          class="t-cell-group"
          data-v-386f9112=""
        >
          <!--v-if-->
          <div
            class="t-cell-group__container"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-386f9112=""
              value-align="left"
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <!--v-if-->
              <div
                class="t-cell__note"
              >
                
                <span
                  data-v-386f9112=""
                >
                  单行标题
                </span>
                <div
                  class="t-badge list-item-badge"
                  data-v-386f9112=""
                >
                  <div
                    class="t-badge__inner t-badge--medium t-badge--circle"
                    style="right: 10px; top: 0px;"
                  >
                    16
                  </div>
                  <!---->
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      03 文字型
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-9223ea9e=""
    >
      <div
        class="badge-demo"
        data-v-9223ea9e=""
      >
        <div
          class="t-badge badge-item"
          data-v-9223ea9e=""
        >
          <!--v-if-->
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-9223ea9e=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              NEW
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-9223ea9e=""
        >
          <!--v-if-->
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-9223ea9e=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              省略号
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class=""
        data-v-9223ea9e=""
      >
        <div
          class="t-cell-group"
          data-v-9223ea9e=""
        >
          <!--v-if-->
          <div
            class="t-cell-group__container"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-9223ea9e=""
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__title"
              >
                单行标题
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <div
                  class="badge-tag-wrap"
                  data-v-9223ea9e=""
                >
                  <div
                    class="t-badge badge-tag"
                    data-v-9223ea9e=""
                  >
                    <!--v-if-->
                    NEW
                  </div>
                  <div
                    class="t-badge badge-tag"
                    data-v-9223ea9e=""
                  >
                    <!--v-if-->
                    NEW
                  </div>
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      04 角标
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-059605cd=""
      data-v-05bee8a6=""
    >
      <div
        class="badge-demo"
        data-v-059605cd=""
      >
        <div
          class="t-badge badge-item"
          data-v-059605cd=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-059605cd=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              circle
              
            </span>
          </button>
          
        </div>
        <div
          class="t-badge badge-item"
          data-v-059605cd=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--round"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-059605cd=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              round
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class=""
        data-v-059605cd=""
      >
        <div
          class="t-cell-group"
          data-v-059605cd=""
        >
          <div
            class="t-cell-group__title"
          >
            
            列表带徽标
            
          </div>
          <div
            class="t-cell-group__container border--top-bottom"
          >
            
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-059605cd=""
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__title"
              >
                单行标题
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <div
                  class="t-badge"
                  data-v-059605cd=""
                >
                  <div
                    class="t-badge__inner t-badge--medium t-badge--dot"
                  >
                    
                  </div>
                  <!---->
                </div>
                
              </div>
              <!--v-if-->
            </div>
            <div
              class="t-cell t-cell--middle t-cell--bordered"
              data-v-059605cd=""
            >
              <div
                class="t-cell__left-icon"
              >
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__title"
              >
                单行标题
                <!--v-if-->
                <!--v-if-->
              </div>
              <div
                class="t-cell__note"
              >
                
                <div
                  class="t-badge t-badge__ribbon--outer"
                  data-v-059605cd=""
                >
                  <!--v-if-->
                  <div
                    class="t-badge__inner t-badge--has-children t-badge--medium t-badge--ribbon"
                    style="right: 5px; top: 0px;"
                  >
                    NEW
                  </div>
                </div>
                
              </div>
              <!--v-if-->
            </div>
            
          </div>
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      05 颜色
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-454396e2=""
    >
      <div
        class="t-cell-group"
        data-v-454396e2=""
      >
        <!--v-if-->
        <div
          class="t-cell-group__container"
        >
          
          <div
            class="badge-demo"
            data-v-454396e2=""
          >
            <div
              class="t-badge badge-item"
              data-v-454396e2=""
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
              >
                12
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
                data-v-454396e2=""
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  按钮
                  
                </span>
              </button>
              
            </div>
            <div
              class="t-badge badge-item"
              data-v-454396e2=""
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
                style="background: rgb(82, 196, 26);"
              >
                99+
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
                data-v-454396e2=""
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  绿色
                  
                </span>
              </button>
              
            </div>
            <div
              class="t-badge badge-item"
              data-v-454396e2=""
            >
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
                style="background: rgb(245, 47, 255);"
              >
                1
              </div>
              
              <button
                aria-disabled="false"
                class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
                data-v-454396e2=""
                role="button"
              >
                <!---->
                <span
                  class="t-button__text"
                >
                  
                  自定义颜色
                  
                </span>
              </button>
              
            </div>
          </div>
          
        </div>
      </div>
    </div>
    
  </div>
  <div
    class="tdesign-mobile-demo-block"
    data-v-05bee8a6=""
  >
    <h2
      class="tdesign-mobile-demo-block__title"
    >
      06 偏移用法
    </h2>
    <!--v-if-->
    
    <div
      class="tdesign-mobile-demo"
      data-v-05bee8a6=""
      data-v-5d4e5c17=""
    >
      <div
        class="badge-line"
        data-v-5d4e5c17=""
      >
        <span
          data-v-5d4e5c17=""
        >
          offset: [10, 10]
        </span>
        <div
          class="t-badge badge-item"
          data-v-5d4e5c17=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: 10px; top: 10px;"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-5d4e5c17=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-line"
        data-v-5d4e5c17=""
      >
        <span
          data-v-5d4e5c17=""
        >
          offset: [-10, 10]
        </span>
        <div
          class="t-badge badge-item"
          data-v-5d4e5c17=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: -10px; top: 10px;"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-5d4e5c17=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-line"
        data-v-5d4e5c17=""
      >
        <span
          data-v-5d4e5c17=""
        >
          offset: [-10, -10]
        </span>
        <div
          class="t-badge badge-item"
          data-v-5d4e5c17=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: -10px; top: -10px;"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-5d4e5c17=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
      </div>
      <div
        class="badge-line"
        data-v-5d4e5c17=""
      >
        <span
          data-v-5d4e5c17=""
        >
          offset: [10, -10]
        </span>
        <div
          class="t-badge badge-item"
          data-v-5d4e5c17=""
        >
          <div
            class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
            style="right: 10px; top: -10px;"
          >
            12
          </div>
          
          <button
            aria-disabled="false"
            class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
            data-v-5d4e5c17=""
            role="button"
          >
            <!---->
            <span
              class="t-button__text"
            >
              
              按钮
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Badge > Badge offsetVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-5d4e5c17=""
>
  <div
    class="badge-line"
    data-v-5d4e5c17=""
  >
    <span
      data-v-5d4e5c17=""
    >
      offset: [10, 10]
    </span>
    <div
      class="t-badge badge-item"
      data-v-5d4e5c17=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        style="right: 10px; top: 10px;"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-5d4e5c17=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-line"
    data-v-5d4e5c17=""
  >
    <span
      data-v-5d4e5c17=""
    >
      offset: [-10, 10]
    </span>
    <div
      class="t-badge badge-item"
      data-v-5d4e5c17=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        style="right: -10px; top: 10px;"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-5d4e5c17=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-line"
    data-v-5d4e5c17=""
  >
    <span
      data-v-5d4e5c17=""
    >
      offset: [-10, -10]
    </span>
    <div
      class="t-badge badge-item"
      data-v-5d4e5c17=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        style="right: -10px; top: -10px;"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-5d4e5c17=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class="badge-line"
    data-v-5d4e5c17=""
  >
    <span
      data-v-5d4e5c17=""
    >
      offset: [10, -10]
    </span>
    <div
      class="t-badge badge-item"
      data-v-5d4e5c17=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
        style="right: 10px; top: -10px;"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-5d4e5c17=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          按钮
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`Badge > Badge shapeVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-059605cd=""
>
  <div
    class="badge-demo"
    data-v-059605cd=""
  >
    <div
      class="t-badge badge-item"
      data-v-059605cd=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--circle"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-059605cd=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          circle
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-059605cd=""
    >
      <div
        class="t-badge__inner t-badge--has-children t-badge--medium t-badge--round"
      >
        12
      </div>
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-059605cd=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          round
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class=""
    data-v-059605cd=""
  >
    <div
      class="t-cell-group"
      data-v-059605cd=""
    >
      <div
        class="t-cell-group__title"
      >
        
        列表带徽标
        
      </div>
      <div
        class="t-cell-group__container border--top-bottom"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-059605cd=""
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge"
              data-v-059605cd=""
            >
              <div
                class="t-badge__inner t-badge--medium t-badge--dot"
              >
                
              </div>
              <!---->
            </div>
            
          </div>
          <!--v-if-->
        </div>
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-059605cd=""
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="t-badge t-badge__ribbon--outer"
              data-v-059605cd=""
            >
              <!--v-if-->
              <div
                class="t-badge__inner t-badge--has-children t-badge--medium t-badge--ribbon"
                style="right: 5px; top: 0px;"
              >
                NEW
              </div>
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge > Badge textVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-9223ea9e=""
>
  <div
    class="badge-demo"
    data-v-9223ea9e=""
  >
    <div
      class="t-badge badge-item"
      data-v-9223ea9e=""
    >
      <!--v-if-->
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-9223ea9e=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          NEW
          
        </span>
      </button>
      
    </div>
    <div
      class="t-badge badge-item"
      data-v-9223ea9e=""
    >
      <!--v-if-->
      
      <button
        aria-disabled="false"
        class="t-button t-size-s t-button--base t-button--default t-button--shape-rectangle"
        data-v-9223ea9e=""
        role="button"
      >
        <!---->
        <span
          class="t-button__text"
        >
          
          省略号
          
        </span>
      </button>
      
    </div>
  </div>
  <div
    class=""
    data-v-9223ea9e=""
  >
    <div
      class="t-cell-group"
      data-v-9223ea9e=""
    >
      <!--v-if-->
      <div
        class="t-cell-group__container"
      >
        
        <div
          class="t-cell t-cell--middle t-cell--bordered"
          data-v-9223ea9e=""
        >
          <div
            class="t-cell__left-icon"
          >
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__title"
          >
            单行标题
            <!--v-if-->
            <!--v-if-->
          </div>
          <div
            class="t-cell__note"
          >
            
            <div
              class="badge-tag-wrap"
              data-v-9223ea9e=""
            >
              <div
                class="t-badge badge-tag"
                data-v-9223ea9e=""
              >
                <!--v-if-->
                NEW
              </div>
              <div
                class="t-badge badge-tag"
                data-v-9223ea9e=""
              >
                <!--v-if-->
                NEW
              </div>
            </div>
            
          </div>
          <!--v-if-->
        </div>
        
      </div>
    </div>
  </div>
</div>
`;
